Always show scrollbar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: whitesmoke;
     color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    overflow-y: scroll;
 }
 
 input[type="number"] {
