--- a/style.css
+++ b/style.css
@@ -10,9 +10,15 @@ input[type="number"] {
 }
 
 #outCan {
-    max-width: 80%;
+    max-width: 100%;
     max-height: 50%;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+}
+
+svg {
+    height: 0;
+    width: 0;
+    opacity: 0;
 }
