Update UI style

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     overflow-y: scroll;
+    text-align: center;
 }
 
 input[type="number"] {
