--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ input:focus, select:focus, button:focus {
     border-color: deeppink;
 }
 
+button {
+    padding: 6px 12px;
+}
+
 #outCan {
     max-width: 100%;
     max-height: 50vh;
